@@ -1,7 +1,8 @@
 package com.cobblemon.mdks.cobblemonpokedex.command;
 
 import com.cobblemon.mdks.cobblemonpokedex.CobblemonPokedex;
-import com.cobblemon.mdks.cobblemonpokedex.config.Config;
+import com.cobblemon.mdks.cobblemonpokedex.config.RewardConfig;
+import com.cobblemon.mdks.cobblemonpokedex.config.RewardConfig.RewardTier;
 import com.cobblemon.mdks.cobblemonpokedex.util.*;
 import com.cobblemon.mod.common.Cobblemon;
 import com.cobblemon.mod.common.api.pokemon.PokemonSpecies;
@@ -29,11 +30,13 @@ import java.util.Collections;
 import java.util.List;
 
 public class DexRewardsCommand extends BaseCommand {
+    private static final org.slf4j.Logger LOGGER = CobblemonPokedex.LOGGER;
+
     public DexRewardsCommand() {
         super("dexrewards", 
               Collections.emptyList(), // no aliases
               null, // no permission required
-              Collections.emptyList() // no subcommands
+              List.of(new ReloadSubcommand()) // Add reload subcommand
         );
     }
 
@@ -52,86 +55,116 @@ public class DexRewardsCommand extends BaseCommand {
     }
 
     private double getPokedexCompletion(ServerPlayer player) {
-        // Get player's Pokedex instance
-        var pokedex = Cobblemon.INSTANCE.getPlayerDataManager().getPokedexData(player);
-        
-        // Get total number of Pokemon species
-        int totalSpecies = PokemonSpecies.INSTANCE.count();
-        
-        // Get number of caught Pokemon
-        int caughtCount = pokedex.getDexCalculatedValue(
-            ResourceLocation.tryParse("cobblemon:national"),
-            CaughtCount.INSTANCE
-        );
-        
-        // Calculate completion percentage
-        return (double) caughtCount / totalSpecies * 100;
+        try {
+            // Get player's Pokedex instance
+            var pokedex = Cobblemon.INSTANCE.getPlayerDataManager().getPokedexData(player);
+            
+            // Get total number of available Pokemon species
+            int totalSpecies = PokemonSpecies.INSTANCE.getSpecies().size();
+            
+            // Get number of unique species caught
+            int uniqueSpeciesCaught = pokedex.getDexCalculatedValue(
+                ResourceLocation.tryParse("cobblemon:national"),
+                CaughtCount.INSTANCE
+            );
+            
+            // Calculate completion percentage based on unique species
+            return (double) uniqueSpeciesCaught / totalSpecies * 100;
+        } catch (Exception e) {
+            LOGGER.error("Error calculating Pokedex completion for player " + player.getName().getString(), e);
+            return 0.0;
+        }
     }
 
     private void openPokedexUI(ServerPlayer player, double completionPercentage) {
-        Config config = CobblemonPokedex.config;
-        
-        // Create main page template
+        // Create main page template with 6 rows and 9 columns
         ChestTemplate template = ChestTemplate.builder(6)
             .fill(new PlaceholderButton()) // Fill with empty background
             .build();
 
-        // Add title button
-        GooeyButton titleButton = GooeyButton.builder()
-            .display(new ItemStack(Items.PAPER))
-            .with(DataComponents.CUSTOM_NAME, Component.literal(String.format("Completion: %.1f%%", completionPercentage)))
-            .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, net.minecraft.util.Unit.INSTANCE)
-            .build();
-        template.set(0, 4, titleButton);
+        // Add completion display
+        int totalSpecies = PokemonSpecies.INSTANCE.getSpecies().size();
+        int uniqueSpeciesCaught = Cobblemon.INSTANCE.getPlayerDataManager()
+            .getPokedexData(player)
+            .getDexCalculatedValue(
+                ResourceLocation.tryParse("cobblemon:national"),
+                CaughtCount.INSTANCE
+            );
 
-        // Create page
-        LinkedPage page = LinkedPage.builder()
-            .template(template)
-            .title("Pokedex Progression")
-            .build();
-        
-        // Add tier buttons
-        int slot = 1;
-        for (int tier : config.getCompletionTiers()) {
-            boolean completed = completionPercentage >= tier;
-            
-            ItemStack displayItem = getRewardItemForTier(tier, player);
-            List<Component> lore = new ArrayList<>();
-            lore.add(Component.literal("§7Rewards:"));
-            if (completed) {
-                lore.add(Component.literal("§a✔ Tier Complete!"));
-            } else {
-                lore.add(Component.literal("§c✘ Not Complete"));
+        RewardTier completionReward = CobblemonPokedex.rewardConfig.getReward("completion");
+        if (completionReward != null && completionReward.getDisplay() != null) {
+            String format = completionReward.getDisplay().getFormat()
+                .replace("{caught}", String.valueOf(uniqueSpeciesCaught))
+                .replace("{total}", String.valueOf(totalSpecies))
+                .replace("{percent}", String.format("%.1f", completionPercentage));
+
+            GooeyButton completionButton = GooeyButton.builder()
+                .display(completionReward.getDisplayItem())
+                .with(DataComponents.CUSTOM_NAME, Component.literal("§6Pokedex Completion"))
+                .with(DataComponents.LORE, new ItemLore(List.of(Component.literal("§7" + format))))
+                .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, net.minecraft.util.Unit.INSTANCE)
+                .build();
+            template.set(completionReward.getRow() - 1, completionReward.getSlot() - 1, completionButton);
+        }
+
+        // Add reward buttons
+        for (int tier : CobblemonPokedex.rewardConfig.getCompletionTiers()) {
+            String tierKey = String.valueOf(tier);
+            RewardTier reward = CobblemonPokedex.rewardConfig.getReward(tierKey);
+            if (reward == null) {
+                LOGGER.error("No reward found for tier: " + tierKey);
+                continue;
             }
+            LOGGER.info("Adding button for tier " + tierKey + " at row " + reward.getRow() + ", slot " + reward.getSlot());
+
+            boolean completed = completionPercentage >= tier;
+            boolean claimed = CobblemonPokedex.playerDataConfig
+                .getPlayerData(player.getUUID())
+                .hasClaimedReward(tier);
+
+            List<Component> lore = new ArrayList<>();
+            lore.add(Component.literal("§7Required: §f" + tier + "%"));
+            if (completed && claimed) {
+                lore.add(Component.literal("§a✔ Claimed"));
+            } else if (completed) {
+                lore.add(Component.literal("§e⚡ Available"));
+                lore.add(Component.literal("§7Click to claim!"));
+            } else {
+                lore.add(Component.literal("§c✘ Locked"));
+                lore.add(Component.literal("§7Progress: §f" + String.format("%.1f%%", completionPercentage)));
+            }
+
+            // Get display item from reward tier
+            ItemStack displayItem = reward.getDisplayItem();
 
             GooeyButton tierButton = GooeyButton.builder()
                 .display(displayItem)
-                .with(DataComponents.CUSTOM_NAME, Component.literal("§6" + tier + "% Completion"))
+                .with(DataComponents.CUSTOM_NAME, Component.literal("§6Tier " + tier))
                 .with(DataComponents.LORE, new ItemLore(lore))
                 .with(DataComponents.HIDE_ADDITIONAL_TOOLTIP, net.minecraft.util.Unit.INSTANCE)
-                .onClick(action -> claimRewards(player, tier))
+                .onClick(action -> {
+                    if (completed && !claimed) {
+                        claimRewards(player, tier);
+                        openPokedexUI(player, completionPercentage); // Refresh UI
+                    }
+                })
                 .build();
             
-            template.set(slot++, 0, tierButton);
+            template.set(reward.getRow() - 1, reward.getSlot() - 1, tierButton);
         }
         
-        UIManager.openUIForcefully(player, page);
-    }
-
-    private ItemStack getRewardItemForTier(int tier, ServerPlayer player) {
-        JsonElement reward = CobblemonPokedex.config.getRewardForTier(tier);
-        if (reward == null || !reward.isJsonObject()) {
-            return new ItemStack(Items.DIAMOND);
-        }
-        
+        // Create and show page
         try {
-            JsonObject rewardObj = reward.getAsJsonObject();
-            String itemId = rewardObj.get("id").getAsString();
-            int count = rewardObj.has("Count") ? rewardObj.get("Count").getAsInt() : 1;
+            LinkedPage page = LinkedPage.builder()
+                .template(template)
+                .title("Pokedex Progression")
+                .build();
             
-            return new ItemStack(BuiltInRegistries.ITEM.get(ResourceLocation.parse("minecraft:" + itemId)), count);
+            LOGGER.info("Opening UI with " + CobblemonPokedex.rewardConfig.getCompletionTiers().size() + " reward tiers");
+            UIManager.openUIForcefully(player, page);
         } catch (Exception e) {
-            return new ItemStack(Items.DIAMOND);
+            CobblemonPokedex.LOGGER.error("Error opening Pokedex UI", e);
+            player.sendSystemMessage(Component.literal("§cError opening Pokedex UI. Please try again."));
         }
     }
 
@@ -142,30 +175,25 @@ public class DexRewardsCommand extends BaseCommand {
             return;
         }
 
-        // Check if reward already claimed
         var playerData = CobblemonPokedex.playerDataConfig.getPlayerData(player.getUUID());
         if (playerData.hasClaimedReward(tier)) {
             player.sendSystemMessage(Component.literal("§cYou've already claimed this reward!"));
             return;
         }
 
-        JsonElement reward = CobblemonPokedex.config.getRewardForTier(tier);
-        if (reward == null || !reward.isJsonObject()) {
+        RewardTier reward = CobblemonPokedex.rewardConfig.getReward(String.valueOf(tier));
+        if (reward == null) {
             player.sendSystemMessage(Component.literal("§cNo reward available for this tier!"));
             return;
         }
 
         try {
-            JsonObject rewardObj = reward.getAsJsonObject();
-            String itemId = rewardObj.get("id").getAsString();
-            int count = rewardObj.has("Count") ? rewardObj.get("Count").getAsInt() : 1;
+            // Grant the reward
+            reward.grant(player);
             
-            ItemStack rewardItem = new ItemStack(BuiltInRegistries.ITEM.get(ResourceLocation.parse("minecraft:" + itemId)), count);
-            player.getInventory().add(rewardItem);
-            
-            // Mark reward as claimed
+            // Mark as claimed
             playerData.setClaimedReward(tier, true);
-            CobblemonPokedex.playerDataConfig.save();
+            CobblemonPokedex.playerDataConfig.savePlayer(player.getUUID());
             
             player.sendSystemMessage(Component.literal("§aYou received your reward for reaching " + tier + "% completion!"));
         } catch (Exception e) {
